--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-pivottable": "^0.11.0",
+    "react-router-dom": "^6.3.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
