--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
+    "@mui/x-date-pickers": "^5.0.2",
+    "@tanstack/react-query": "^4.3.4",
     "axios": "^0.27.2",
     "convert-excel-to-json": "^1.7.0",
     "fast-xml-parser": "^4.0.10",
     "file-saver": "^2.0.5",
+    "material-react-table": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
