--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.2",
+    "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.3.4",
     "axios": "^0.27.2",
     "convert-excel-to-json": "^1.7.0",
