Cambios minimos. Ver si hay que revertir

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "testpivot",
+  "homepage": "https://ovcm.biamobile.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
