--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-saver": "^2.0.5",
     "material-react-table": "^1.0.7",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-pivottable": "^0.11.0",
