--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@headlessui/react": "^1.7.3",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.2",
@@ -21,6 +22,7 @@
     "convert-excel-to-json": "^1.7.0",
     "fast-xml-parser": "^4.0.10",
     "file-saver": "^2.0.5",
+    "heroicons": "^2.0.12",
     "material-react-table": "^1.0.7",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
